Change refresh token and power calculation
